# hull-tactical-mkt-prediction

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
notebooks/: eda_overview.ipynb  eda_report.ipynb  feature_selection.ipynb  model_backtest.ipynb
scripts/: run_backtest.py  run_feature_engineering.py  run_feature_selection.py  run_full_pipeline.py  run_mlflow_experiments.py  run_preprocessing.py  run_training.py
src/hull_tactical/: __init__.py  backtest.py  config.py  data_loading.py  eda.py  feature_engineering.py  feature_selection.py  mlflow_experiments.py  modelling.py  paths.py  preprocessing.py  utils.py
v2/: v2_architecture.md
v2/notebooks/: eda.ipynb
v2/reports/: v2_模型评估报告.docx  v2_模型评估报告.md  v2_测试集回测报告.docx  v2_测试集回测报告.md
v2/scripts/: generate_report.py  run_test_evaluation.py  run_tuning.py
v2/src/pipeline/: backtest.py  config.py  diagnostics.py  feature_engineering.py  feature_selection.py  lstm_model.py  models.py  preprocessing.py  walk_forward.py
