[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hull_tactical"
version = "0.1.0"
description = "Reproducible pipeline for the Kaggle Hull Tactical Market Prediction competition."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hull Tactical Project" }]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "missingno>=0.5",
    "joblib>=1.3",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]
